package com.galaxybank.model;

public enum TransactionType {

    CHECK_BALANCE, DEPOSIT, WITHDRAWN;
}
