@startuml

title __GALAXYBANK-ATM's Class Diagram__\n

  namespace com.galaxybank {
    class com.galaxybank.AtmApplication {
    }
  }
  

  namespace com.galaxybank {
    namespace config {
      class com.galaxybank.config.ApplicationConfiguration {
      }
    }
  }
  

  namespace com.galaxybank {
    namespace controller {
      class com.galaxybank.controller.CustomerServiceController {
      }
    }
  }
  

  namespace com.galaxybank {
    namespace model {
      class com.galaxybank.model.ATM {
      }
      class com.galaxybank.model.Account {
      }
      enum AccountType {
      }
      class com.galaxybank.model.AdminUser {
      }
      class com.galaxybank.model.Bank {
      }
      class com.galaxybank.model.Card {
      }
      class com.galaxybank.model.Customer {
      }
      class com.galaxybank.model.Transaction {
      }
      enum TransactionType {
      }
    }
  }
  namespace com.galaxybank {
    namespace repository {
      interface com.galaxybank.repository.CardRepository {
      }
    }
  }

  namespace com.galaxybank {
    namespace service {
      class com.galaxybank.service.CustomerService {
      }
      class com.galaxybank.service.AdminService{
      }
    }
  }
  

  com.galaxybank.controller.CustomerServiceController o-- com.galaxybank.service.AdminService : adminService
  com.galaxybank.controller.CustomerServiceController o-- com.galaxybank.service.CustomerService : customerService
  com.galaxybank.model.ATM o-- com.galaxybank.model.Bank : bank
  com.galaxybank.model.Account o-- com.galaxybank.model.AccountType : accountType
  com.galaxybank.model.Account o-- com.galaxybank.model.Customer : customer
  com.galaxybank.model.Card o-- com.galaxybank.model.Account : account
  com.galaxybank.model.Customer o-- com.galaxybank.model.Bank : bank
  com.galaxybank.model.Transaction o-- com.galaxybank.model.ATM : atm
  com.galaxybank.model.Transaction o-- com.galaxybank.model.Card : card
  com.galaxybank.model.Transaction o-- com.galaxybank.model.TransactionType : transactionType
  com.galaxybank.service.AdminService o-- com.galaxybank.repository.AdminRepository : adminRepository
  com.galaxybank.service.AdminService o-- com.galaxybank.repository.AtmRepository : atmRepository
  com.galaxybank.service.CustomerService o-- com.galaxybank.repository.AccountRepository : accountRepository
  com.galaxybank.service.CustomerService o-- com.galaxybank.repository.AtmRepository : atmRepository
  com.galaxybank.service.CustomerService o-- com.galaxybank.repository.CardRepository : cardRepository


@enduml
